# PhotoPoint-TestTask

./: .env.sample  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
config/config/: settings.py
current/: models.py  services.py  urls.py  views.py
current/migrations/: 0001_initial.py
